@@ -1,8 +1,9 @@
 #!/usr/bin/env bash
 
 do_error() {
+    grep "zz_END_OF_ROM_CODE" $tmpfile |awk -F "$" '{print "0x"$2}'|awk -n -F "$" '{print "Exceeded rom size by "$1" bytes\n"}'
     echo "Error: ROM exceeded 0x4000 bytes"; rm $tmpfile; exit 255
-}
+    }
 
 show_space() {
     grep "zz_END_OF_ROM_CODE" $tmpfile |awk -F "$" '{print "0x"$2}'|awk -n -F "$" '{print 0xffff-$1" bytes remaining in rom"}'
@@ -16,7 +17,8 @@ else
 
     z80asm -L $1 $2 $3 $4 $5 2>$tmpfile
     if [ $? -gt 0 ]; then
-        echo "Oops"
+        cat $tmpfile
+        echo "z80asm error $?"
     fi
 
     #|| err=$?;grep -v equ $tmpfile; exit $err
@@ -24,6 +26,6 @@ else
     romend=`grep "zz_END_OF_ROM_CODE" $tmpfile |awk -F "$" '{print "0x"$2}'`
 
     echo $msg
-    [[ $romend -lt 0xc000 ]] && do_error || show_space;echo "$1 Compiled successfully"
+    [[ $romend -lt 0xc000 ]] && do_error || show_space;echo "Compiled successfully"
     rm $tmpfile
 fi
